--- a/pomodoro-clock/index.html
+++ b/pomodoro-clock/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
 <body>
   <!--<div>Example <span id="time"></span> minutes!</div>-->
   <div class="main">
@@ -27,3 +33,4 @@
       </div>
     </div>
   </body>
+  </html>
