Update index.html files

--- a/random-quote-machine/index.html
+++ b/random-quote-machine/index.html
@@ -1,13 +1,22 @@
-<div class="intro">
-  <h1>Random Quote Machine</h1>
-  <p>Click on the buttom to generate random quotes</p>
-  <div class="text-center">
-    <a id="quoteID" class="btn btn-default">New quote</a>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+<body>
+  <div class="intro">
+    <h1>Random Quote Machine</h1>
+    <p>Click on the buttom to generate random quotes</p>
+    <div class="text-center">
+      <a id="quoteID" class="btn btn-default">New quote</a>
+    </div>
   </div>
-</div>
-<div class="quote bg-primary">
-  <pre id="response"></pre>
-</div>
-<div id="button">
-  <p>Ps: select the text to share</p>
-</div>
+  <div class="quote bg-primary">
+    <pre id="response"></pre>
+  </div>
+  <div id="button">
+    <p>Ps: select the text to share</p>
+  </div>
+</body>
+</html>
