--- a/wikipedia-viewer/index.html
+++ b/wikipedia-viewer/index.html
@@ -2,7 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Wikipedia Viewer</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
+    <script src="../js/jquery.js"></script>
+    <script src="../js/angular/angualr.min.js"></script>
+    <script src="wikipedia.js"></script>
   </head>
   <body ng-app="wikiapp">
     <section class="intro">
@@ -24,6 +30,6 @@
           </div>
         </a>
       </section>
-    </section> 
+    </section>
 </body>
 </html>
